# C-and-CPP

./: README.md
ex1-yotam181/: CMakeLists.txt  README.md  cipher.c  main.c  tests.c
ex2-yotam181/: CMakeLists.txt  README.md  input  main.c  sort_bus_lines.c  sort_bus_lines.h  test_bus_lines.c  test_bus_lines.h
ex3a-yotam181/: CMakeLists.txt  README.md  markov_chain.c  markov_chain.h  tweets_generator.c
ex3b-yotam181/: CMakeLists.txt  README.md  ex3btests.h  justdoit_tweets.txt  makefile  markov_chain.c  markov_chain.h  snakes  snakes_and_ladders  snakes_and_ladders.c  tweets  tweets_generator  tweets_generator.c
ex4-yotam181/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp
ex5-yotam181/: Movie.cpp  Movie.h  README.md  RecommendationSystem.cpp  RecommendationSystem.h  RecommendationSystemLoader.cpp  RecommendationSystemLoader.h  User.cpp  User.h  UsersLoader.cpp  UsersLoader.h  UsersLoader_input.txt  print_main.cpp  prsb  run
